kubernetes/apps/kosync/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kosync
  namespace: kosync
spec:
  selector:
    app.kubernetes.io/name: kosync
  ports:
    - name: http
      port: 17200
      targetPort: http
