kubernetes/apps/kosync/ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kosync-public
  namespace: kosync
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - kosync.lab.seandre.dev
      secretName: kosync-public-tls
  rules:
    - host: kosync.lab.seandre.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kosync
                port:
                  number: 17200
